@@ -1,2 +1,4 @@
+* Add status on contract set
+
 Version 1.3 - 2015-01-22
 * Module creation
